fix tandoor db host

--- a/tasks/tandoor.yml
+++ b/tasks/tandoor.yml
@@ -37,7 +37,7 @@
     env:
       SECRET_KEY: "{{ portainer_tandoor.secret_key }}"
       DB_ENGINE: django.db.backends.postgresql
-      POSTGRES_HOST: db_recipes
+      POSTGRES_HOST: "{{ ansible_default_ipv4.address | default(ansible_all_ipv4_addresses[0]) }}"
       POSTGRES_PORT: "5432"
       POSTGRES_USER: djangodb
       POSTGRES_PASSWORD: "{{ portainer_tandoor.postgres_password }}"
