remove traefik + add port forwards

--- a/tasks/authelia.yml
+++ b/tasks/authelia.yml
@@ -86,12 +86,14 @@
       AUTHELIA_STORAGE_ENCRYPTION_KEY_FILE: /config/authelia_storage_secret.key
       AUTHELIA_NOTIFIER_SMTP_PASSWORD_FILE: /config/smtp_password.password
     restart_policy: unless-stopped
-    labels:
-      traefik.enable: "true"
-      traefik.http.routers.authelia.rule: Host(`authelia.{{ portainer_root_domain }}`)
-      traefik.http.routers.authelia.entrypoints: web-secure
-      traefik.http.routers.authelia.tls: "true"
-      traefik.http.services.authelia.loadbalancer.server.port: "9091"
+    ports:
+      - "9091:9091"
+    # labels:
+    #   traefik.enable: "true"
+    #   traefik.http.routers.authelia.rule: Host(`authelia.{{ portainer_root_domain }}`)
+    #   traefik.http.routers.authelia.entrypoints: web-secure
+    #   traefik.http.routers.authelia.tls: "true"
+    #   traefik.http.services.authelia.loadbalancer.server.port: "9091"
     networks:
       - name: web-secure
     healthcheck:
