--- a/tasks/dashy.yml
+++ b/tasks/dashy.yml
@@ -3,14 +3,14 @@
   community.docker.docker_container:
     name: dashy
     image: tychobrouwer/dashy-tychobrouwer
-    labels:
-      traefik.enable: "true"
-      traefik.http.routers.dashy.rule: Host(`dash.{{ portainer_root_domain }}`)
-      traefik.http.routers.dashy.entrypoints: web-secure
-      traefik.http.routers.dashy.tls: "true"
+    # labels:
+    #   traefik.enable: "true"
+    #   traefik.http.routers.dashy.rule: Host(`dash.{{ portainer_root_domain }}`)
+    #   traefik.http.routers.dashy.entrypoints: web-secure
+    #   traefik.http.routers.dashy.tls: "true"
     state: started
-    # ports:
-    #   - "90:80"
+    ports:
+      - "1080:80"
     networks:
       - name: web-secure
     volumes:
