linter + name consistency

--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -18,7 +18,7 @@
     state: present
 
 - name: Ensure docker service is started and enabled
-  ansible.builtin.service:
+  ansible.builtin.systemd:
     name: docker
     state: started
     enabled: true
